Added Attaway's and Essick's textbooks to the errata list, updated favicon and course list

--- a/ddb_courses.html
+++ b/ddb_courses.html
@@ -52,8 +52,9 @@
 		<br> If a date prior to S02 is shown but it is not a link it means the 
 		course was instructed by Professor De Boer during that semester but 
 		there is nothing related available online.
-		<br>You may e-mail professor De Boer to ask for information about courses 
-		that have dates that are not links.  
+		<br>If you cannot find what you are looking for here, you are encouraged 
+        to e-mail professor De Boer to ask about it, but there is no assurance 
+		the information for older courses has been archived.  
 		<br>(To get back to this page from one of the links below, use your 
 		browser's back-arrow.)</small></p><p>
 		 
