--- a/errata/ERR.HTM
+++ b/errata/ERR.HTM
@@ -24,7 +24,7 @@
    <table align="center" width=504><tr><td width="504">
 
 <P align="center"><A HREF=
-"https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/engineering">
+"https://dfdeboer.github.io/redirect/Dordt_Engineering.htm">
             DORDT COLLEGE ENGINEERING DEPARTMENT</A><br>
             PROF. DE BOER's TEXTBOOK ERRATA LISTS</p><br></td></tr>
    </table>
@@ -48,6 +48,21 @@
    HREF="Alexander_Sadiku/6th/A_S_6_ER.HTM"
    >6th edition</A></small><p></td></tr><tr><td>
    
+   <A HREF="Attaway/5th/A_5_ER.HTM"><img src=
+   "Attaway/5th/Attaway_MatLAB_Cover_9780128154793_small.jpg"
+   width="103" height="127" border="0"></A></td><td><p>
+   <A HREF="Attaway/5th/A_5_ER.HTM"
+   >Attaway, Stormy<br><I>
+   Matlab: A practical introduction to Programming and <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+          Problem Solving, 5th edition, </I><br> 
+   Butterworth-Heinemann, an imprint of Elsevier, 2017<br>
+   ISBN 978-0-12-815479-3</A><br><br>
+   <small><A 
+   HREF="Attaway/4th/A_4_ER.HTM"
+   >4th edition</A>, &nbsp;&nbsp;&nbsp;<A 
+   HREF="Attaway/5th/A_5_ER.HTM"
+   >5th edition</A></small><p></td></tr><tr><td>
+   
    <A HREF="Dorf_Svoboda/7th/D_S_7_ER.HTM"><img src=
    "Dorf_Svoboda/7th/dorf_svoboda_7.jpg"
    width="100" height="134" border="0"></A></td><td><p>
@@ -62,6 +77,22 @@
    HREF="Dorf_Svoboda/7th/D_S_7_ER.HTM"
    >7th edition</A></small><p></td></tr><tr><td>
 
+   <A HREF="Essick/4th/E_4_ER.HTM"><img src=
+   "Essick/4th/Essick_LabVIEW_Text_Cover_9780190853068_small.jpg"
+   width="104" height="129" border="0"></A></td><td><p>
+   <A HREF="Essick/4th/E_4_ER.HTM"
+   >Essick, john<br><I>
+   Hands-On Introduction to LabVIEW. . .</I><br> 
+   4th edition, Oxford Univesity Press, 2019<br>
+   ISBN 978-0-19-085306-8</A><br><br>
+   <!-- <small><A 
+   HREF="Alexander_Sadiku/4th/A_S_4_ER.HTM"
+   >4th edition</A>, &nbsp;&nbsp;&nbsp;<A 
+   HREF="Alexander_Sadiku/5th/A_S_5_ER.HTM"
+   >5th edition</A>, &nbsp;&nbsp;&nbsp;<A 
+   HREF="Alexander_Sadiku/6th/A_S_6_ER.HTM"
+   >6th edition</A></small> --><p></td></tr><tr><td>
+   
    <A HREF="Mano_Kime/4th/MK_4_ERR.HTM"><img src=
    "Mano_Kime/4th/Mano_Kime_4e.jpg"
    width="108" height="151" border="0"></A></td><td><p>
