Updated home page (index) for the spring 2019 semester, published EGR 170 pages, published skeleton file of EGR 323

--- a/ddb_courses.html
+++ b/ddb_courses.html
@@ -72,6 +72,9 @@
 		<a href="S15/117S15.HTM">S15</a>, 
         <a href="S14/117S14.HTM">S14</a>,<br><br>
 		
+		EGR 170, Engineerig Programming For Instrumentation and Automation<br>
+		<a href="S19/170S19.HTM">S19</a><br><br>
+		
 		EGR 202, Materials Science<br>
 		S96<br><br>
 		 
@@ -163,13 +166,14 @@
 		<a href="F04/322F04.HTM">F04</a><br><br>
 		
 		EGR 323, Electronics II (with a lab&mdash;same course as EGR 305)<br>
+		<a href="S19/323S19.HTM">S19</a>,
 		<a href="S17/323S17.HTM">S17</a>, 
 		<a href="S15/323S15.HTM">S15</a>, 
 		<a href="S13/323S13.HTM">S13</a>, 
 		<a href="S11/323S11.HTM">S11</a>, 
 		<a href="S09/323S09.HTM">S09</a>, 
 		<a href="S07/323S07.HTM">S07</a>, 
-		<a href="S05/323S05.HTM">S05</a><br><br>
+		<a href="S05/323S05.HTM">S05</a>,<br><br>
 		
 		EGR 360, Introduction to Power System Analysis<br>
 		<a href="F15/360F15.HTM">F15</a>, 
