fixed a broken link

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 <!--EGR 322-->
      <A HREF="https://dordt.instructure.com/courses/2481184">
      <font color="#0099FF">C</font></A>
-     <a href="F18/322F18.HTM"
+     <a href="S19/323S19.HTM"
      >EGR 322&nbsp; &nbsp; &nbsp; &nbsp; 
 	 Electronics II (with a lab)</b></a><br>
 
