updated EGR 323 page for S19 and S17, updated syllabus for EGR 170 to comply with new guidlines on when major projects can be due

--- a/S17/323S17.HTM
+++ b/S17/323S17.HTM
@@ -117,9 +117,9 @@ The Canvas@dordt portal provides everything in this frame and more.
             
 <a href="../S15/323S15.HTM">
 <img src="../PREVIOUS.GIF" ALT="<--PREVIOUS" border="0"></a>
-offering of this course <!-- 
+offering of this course  
 <a href="../S19/323S19.HTM"> 
-<img src="../NEXT.GIF" ALT="MEXT" border="0"> -->            <br>
+<img src="../NEXT.GIF" ALT="MEXT" border="0">            <br>
 <a href="../F16/322F16.HTM">
 <img src="../PREVIOUS.GIF" ALT="<--PREVIOUS" border="0"></a>
 offering of EGR322 
