--- a/S19/323S19.HTM
+++ b/S19/323S19.HTM
@@ -45,7 +45,7 @@ TABLE {
 "http://global.oup.com/us/companion.websites/9780199339136/student/"
 ><img width="120" height="150"  
 alt="'click'-->to publisher's web page" hspace="0" 
-src="322/Sedra_Smith_7_Cover_120x150.jpg" 
+src="323/Sedra_Smith_7_Cover_120x150.jpg" 
 border="0"></A><br>
 <a target="_top" href=
 "http://global.oup.com/us/companion.websites/9780199339136/student/"
@@ -55,34 +55,34 @@ border="0"></A><br>
 <A target="_top" HREF="../index.html">
 <img width="135" height="165" 
 alt="'click'-->to De Boer's homepage" hspace="0" 
-src="322/DeBoer_2016_135x165.jpg" 
+src="323/DeBoer_2016_135x165.jpg" 
 border="0"></A><br>
 <A target="_top" HREF="../index.html">
 <b>Prof. De Boer</b></a></td>
 
 <td style="text-align: center;" valign="bottom" width=140>
 <A target="_top" HREF=
-"322/PSPICE.htm">
+"323/PSPICE.htm">
 <img width="140" height="148" 
 alt="'click'-->to PSpice page" hspace="0" 
-src="322/PSpice_logo.gif" 
+src="323/PSpice_logo.gif" 
 border="0"></A><br>
 <A target="_top" HREF=
-"322/PSPICE.htm">
+"323/PSPICE.htm">
 <b>Lab Software</b></a></td>
 
                                                     </tr></table>
                    <table align="center", width="420"><tr><td><br>
 
                   <P style="text-align: center;"><A target="_top" 
-   HREF="322/322F18PS.HTM"
+   HREF="323/323S19PS.HTM"
                      >Homework Assignments</A>           <br><br>
        All course work must conform to these <A target="_top" 
-	      HREF="HWSTDF18.HTM"
+	      HREF="HWSTDS19.HTM"
                                       >standards</A>.    <BR></P> 
 
             <P style="text-align: center;"><A target="_top" HREF= 
-	    "322/EGR322_01Syllabus2018F_De_Boer_322F18SY_Electronics_I.PDF"
+	    "323/EGR323_Syllabus2019S_De_Boer_323S19SY_Electronics II.PDF"
                      >Course Syllabus</A>                    <br>
         Includes course catalog description,                 <br> 
           textbook information, grade weights, etc.          </P> 
@@ -98,7 +98,7 @@ border="0"></A><br>
                            <p style="text-align: center";><small>
 (The information in this frame is available outside of 
 Canvas@Dordt on the World Wide Web via the <a href=
-"https://dfdeboer.github.io/F18/322F18.HTM"  
+"https://dfdeboer.github.io/F18/323F18.HTM"  
 >public web portal</a> to this course).              </small></p>
 -----UNCOMMENT FOR INSTRUCTURE------------------------------ -->
 <!-- INSTRUCTURE STOP CUT HERE  -->   
