fixed a broken link

--- a/S19/323S19.HTM
+++ b/S19/323S19.HTM
@@ -82,7 +82,7 @@ border="0"></A><br>
                                       >standards</A>.    <BR></P> 
 
             <P style="text-align: center;"><A target="_top" HREF= 
-	    "323/EGR323_Syllabus2019S_De_Boer_323S19SY_Electronics II.PDF"
+	    "323/EGR323_Syllabus2019S_De_Boer_323S19SY_Electronics II.pdf"
                      >Course Syllabus</A>                    <br>
         Includes course catalog description,                 <br> 
           textbook information, grade weights, etc.          </P> 
