And another broken link fixed

--- a/S19/170S19.HTM
+++ b/S19/170S19.HTM
@@ -99,7 +99,7 @@ src=170/LabVIEW_Button.png></A><br><br>
                                       >standards</A>.    <BR></P> 
 
             <P style="text-align: center;"><A target="_top" HREF= 
-	    "170/EGR170-02Syllabus2019S_De_Boer_170S19SY_EGR_Programming.PDF"
+	    "170/EGR170-02Syllabus2019S_De_Boer_170S19SY_EGR_Programming.pdf"
                      >Course Syllabus</A>                    <br>
         Includes course catalog description,                 <br> 
           textbook information, grade weights, etc.          </P> 
