Yet another link issue fixed

--- a/S19/323S19.HTM
+++ b/S19/323S19.HTM
@@ -62,13 +62,13 @@ border="0"></A><br>
 
 <td style="text-align: center;" valign="bottom" width=140>
 <A target="_top" HREF=
-"323/PSPICE.HTM">
+"323/PSPICE.htm">
 <img width="140" height="148" 
 alt="'click'-->to PSpice page" hspace="0" 
 src="323/PSpice_logo.gif" 
 border="0"></A><br>
 <A target="_top" HREF=
-"323/PSPICE.HTM">
+"323/PSPICE.htm">
 <b>Lab Software</b></a></td>
 
                                                     </tr></table>
