added stuff to canvas commons, plus other minor updates

--- a/S19/323/PSPICE.htm
+++ b/S19/323/PSPICE.htm
@@ -34,7 +34,7 @@ TABLE {
                                                              <BR>
           INSTRUCTIONS FOR DOWNLOADING                       <BR>
 	  FOR USE WITH VARIOUS ENGINEERING COURSES               <BR>
-                  (Fall 2018)                            </B></P>
+                  (Spring 2019)                            </B></P>
                                                </td></tr></table>
                     <table align="center" width="420" border="0">
                                                              <tr>
