--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -91,14 +91,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  1/14<!-- --</a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      1/16<!-- --</a><!-- --><br><!-- --<a href=
+	  1/14<!-- --</a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/141359539/download?download_frd=1"><!-- -->
+      1/16<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       1/18<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Registration and advising day, no class</font><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><b>Intro</b>., <b>Ch 8</b> IC vs. discrete, Moore's Law, MOSFET current mirror<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 1/21------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
