--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -109,7 +109,8 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
         1/17
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        1/14
+        <a href="https://dordt.instructure.com/courses/2481201/assignments/21548382"
+		>1/24</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
@@ -150,6 +151,15 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                                  <TR><TD width="60" valign="top">
 Note 1) 
                                                         </TD><TD>
+Turn your homework in electronically.  Homework is due at 10:50 
+AM on the date shown.  Click the due-date and follow on-screen 
+directions to turn your homework in.  Usually you will upload 
+exactly one word-processor file.  Be sure your file meets the 
+course standards, including appropriate page headers, problem 
+statements, etc.  
+                         <BR><BR><TR><TD width="60" valign="top">
+Note 2)
+                                                        </TD><TD>
 Homework solutions are usually available one or two class periods 
 after the due date. Click the "returned date" on this page to 
 access the solutions. If the "Returned" date is not a link (is 
@@ -162,14 +172,14 @@ the link again. The link only works when you are logged in to
 courses@dordt.           
                          <BR><BR><TR><TD width="60" valign="top">
 
-Note 2) 
+Note 3) 
                                                         </TD><TD>
 Problems sets shown above with no "assigned" date are 
 tentative.  More problems might be added, expected due dates 
 might change, but problems shown will eventually be assigned.
 
                          <BR><BR><TR><TD width="60" valign="top">
-Note 3) 
+Note 4) 
                                                         </TD><TD>
 If you are having difficulty reading the latest version of this 
 page it may have to do with your browser's cached memory. Read 
