EGR 322 daily slides and next PS published

--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -93,13 +93,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
 	  1/14<!-- --</a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/141359539/download?download_frd=1"><!-- -->
-      1/16<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      1/18<!-- --</a><!-- --></td>
+      1/16<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/141528381/download?download_frd=1"><!-- -->
+      1/18<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Registration and advising day, no class</font><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><b>Intro</b>., <b>Ch 8</b> IC vs. discrete, Moore's Law, MOSFET current mirror<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->BJT mirror, steering, base current comp., mirror as amp,  basic gain cell<!--end comment--></td>  
    </TR><!-- Week of 1/21------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
