--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/08/2019 10:49 pm)
+                              >(Last update: 1/18/2019 12:58 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -100,20 +100,26 @@ PS                                                           <BR>
         &nbsp;
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
- &nbsp;
+ 2
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;
+        1/18
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;
+        1/25
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!-- <a href=
         "https://dordt.instructure.com/files/134540373/download?download_frd=1"
         >9/17</a><br> -->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        &nbsp;
+        topics: Basic gain cell, CG, CB amps alone,    <br>&nbsp;
+		                              &nbsp; &nbsp; &nbsp; &nbsp;
+				Cascode amp (CG, CB together)          <br>&nbsp;
+		Review 8.1, 8.2, Read: 8.3, 8.4                <br>&nbsp;
+		                                               <br>&nbsp;
+		<DO>Do Problems +8.3, 8.4, 8.5, +8.8, 8.9,     <br>&nbsp;
+		+8.11, +8.25, +8.27, +8.51, 8.55, +8.69</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  1
@@ -141,7 +147,9 @@ PS                                                           <BR>
 		Read: 8.1, 8.2                                 <br>&nbsp;
                                                        <br>&nbsp;
         <DO>Do Problems +D8.1, D8.2</DO>               <br>&nbsp;
-		Note errata on the answer to Problem +D8.1
+		Note errata on the <a href=
+		"https://dfdeboer.github.io/errata/Sedra_Smith/7th/S_S_7_ER.HTM#L9_8P1"
+		>answer to Problem +D8.1</a>
 <!-- -----------------BOTTOM-OF TABLE-------------- --></TD></TR>
 </TABLE>
 <BR>
