--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -43,8 +43,8 @@ A:hover {
                    <A HREF="../../redirect/Dordt_Engineering.htm"
 
          >DORDT COLLEGE ENGINEERING DEPARTMENT        </A><BR><B>
-                  ELECTRONICS II &mdash; EGR 323              <BR>
-                       (Spring 2019)                       </B></P>
+                  ELECTRONICS II &mdash; EGR 323             <BR>
+                       Spring 2019                       </B></P>
 
                    <P style="text-align:center; margin-top: 10px; 
                                        margin-bottom: 0px;"><U><B
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/18/2019 12:58 pm)
+                              >(Last update: 1/21/2019 1:53 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -131,9 +131,9 @@ PS                                                           <BR>
         1/18
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		<!-- <a href=
-        "https://dordt.instructure.com/files/133815349/download?download_frd=1"
-        ><!-- Ex-<br>pect-<br>ed<br>--><!--9/03</a><br>-->
+		<!-- --><a href=
+        "https://dordt.instructure.com/files/141688547/download?download_frd=1"
+        >9/03<!-- --></a><br>
         <br>
         See<br>
         notes<br>
