Corrected an error in EGR 170 PS#1 detail in email 190122 at about 2 PM

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -59,7 +59,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 12/17/2018 11:58 am)
+                              >(Last update: 12/22/2018 1:55 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -129,7 +129,18 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 			<!--F1.6-->2.25,
 			<!--F1.7-->2.31,
 			<!--F1.8-->2.41</D4>                            <br>&nbsp;
-		or do homework in <D5>Attawy 5th ed.                <br>&nbsp;
+			                                                <br>&nbsp;
+		or do option #1 (preferred) in <D5>Attawy 5th ed.<br>&nbsp;
+		    <!--F1.1-->1.29, 
+		    <!--F1.2-->1.15, 
+			<!--F1.3-->1.34,
+			<!--F1.4 could not find, this in place-->2.8,
+			<!--F1.5-->2.15
+			<!--F1.6-->2.28,
+			<!--F1.7-->2.34,
+			<!--F1.8-->2.44</D5>                            <br>&nbsp;
+			                                                <br>&nbsp;
+		or do option #2 (harder?) in <D5>Attawy 5th ed.<br>&nbsp;
 		    <!--F1.1-->1.25, 
 		    <!--F1.2-->1.12, 
 			<!--F1.3-->1.30,
@@ -137,7 +148,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 			<!--F1.5-->2.13
 			<!--F1.6-->2.25,
 			<!--F1.7-->2.31,
-			<!--F1.8-->2.41</D5>                            <br>&nbsp;
+			<!--F1.8-->2.41</D5>  
 				  
 
 		
