EGR 170 PS#2 published

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -59,7 +59,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 12/22/2018 1:55 pm)
+                              >(Last update: 12/24/2018 4:39 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -88,18 +88,45 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
     Assignment                                       </b></small>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
- &nbsp;
+ 2
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;
+        1/24
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;
-       
+        <a href="https://dordt.instructure.com/courses/2481201/assignments/21575932"
+		>1/31</a>
+        
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-		&nbsp;
+		Topics:  Input, output, scope, if, switch      <br>&nbsp;
+		Read:  Attaway, Chapters 3, 4                  <br>&nbsp;
+		                                               <br>&nbsp;
+		Do homework in <D4>Attaway 4th ed.             <br>&nbsp;
+		    3.8,  <!-- disp vs. fprintf -->           
+		    3.10, <!-- script thirdside triangle -->
+			3.13, <!-- fix iotrace -->
+			3.15, <!-- plot sin(x) -->
+			3.25, <!-- script vs. function -->
+			3.30  <!-- Pythagorean triple -->           <br>&nbsp;
+			4.7,  <!-- script pythagorean -->
+			4.21, <!-- script storm -->
+			4.24, <!-- ifelse to switch -->
+			4.30  <!-- makemat --></D4>                            <br>&nbsp;
+			                                                <br>&nbsp;
+		or do <D5>Attawy 5th ed.<br>&nbsp;
+		    3.8,  <!-- disp vs. fprintf -->
+		    3.13,  <!-- fix iotrace -->
+			3.14, <!-- script power bill -->
+			3.18, <!-- plot sin(x) -->
+			3.26, <!-- script vs. function -->
+			3.33, <!-- Pythagorean triple -->                            <br>&nbsp;
+			4.8,  <!-- script Pythagorean -->
+			4.22, <!-- script storm -->
+			4.24, <!-- ifelse to switch -->
+			4.31  <!-- makemat --></D5>  
+		
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
@@ -119,6 +146,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		<!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Course intro, Matlab intro, variables,     <br>&nbsp;
 		operators, expressions, vectors, matricies          <br>&nbsp;
+		Read:  Attway, Chapters 1, 2                        <br>&nbsp;
 		                                                    <br>&nbsp;
 		Do homework in <D4>Attaway 4th ed.                  <br>&nbsp;
 		    <!--F1.1-->1.25, 
