EGR 170 Q1 solutions posted

--- a/S19/170/170_02_S19_DN.HTM
+++ b/S19/170/170_02_S19_DN.HTM
@@ -114,7 +114,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Review slides on Ch. 2, <b>Ch. 3, 4</b> comp vs interp, hierarchy of software <!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment-->Quiz #1 Solutions (will be here by midnight)<!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment--><a href="https://dordt.instructure.com/files/141893277/download?download_frd=1"=>Quiz #1 Solutions</a> <!--end comment--></td>  
    </TR><!-- Week of 1/28------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">&nbsp;<br>Th<br>&nbsp;</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
