EGR 323 delayed the due date on Problem +D8.69 in PS#2

--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/21/2019 1:53 pm)
+                              >(Last update: 1/24/2019 8:35 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -98,6 +98,7 @@ PS                                                           <BR>
         >9/17</a><br> -->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         &nbsp;
+		<DO>Do +D8.69 and more to be announced later</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  2
@@ -113,13 +114,16 @@ PS                                                           <BR>
         "https://dordt.instructure.com/files/134540373/download?download_frd=1"
         >9/17</a><br> -->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        topics: Basic gain cell, CG, CB amps alone,    <br>&nbsp;
+        Topics: Basic gain cell, CG, CB amps alone,    <br>&nbsp;
 		                              &nbsp; &nbsp; &nbsp; &nbsp;
 				Cascode amp (CG, CB together)          <br>&nbsp;
 		Review 8.1, 8.2, Read: 8.3, 8.4                <br>&nbsp;
 		                                               <br>&nbsp;
 		<DO>Do Problems +8.3, 8.4, 8.5, +8.8, 8.9,     <br>&nbsp;
-		+8.11, +8.25, +8.27, +8.51, 8.55, +8.69</DO>
+		+8.11, +8.25, +8.27, +8.51, 8.55</DO>          <br>&nbsp;
+		                                    <br>&nbsp;<small>
+		(On Thursday evening at about 8:30 PM dDB removed<br>&nbsp;
+		+D8.69 from this problem set and moved it to PS#3.)</small>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  1
