EGR 170, posted solutions to PS#1

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -59,7 +59,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 12/24/2018 4:39 pm)
+                              >(Last update: 12/24/2018 10:19 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -140,9 +140,9 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		>1/24</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/80063195/download?download_frd=1"
-        >1/21</a>--><br><br>
+        <a href=
+        "https://dordt.instructure.com/files/141903844/download?download_frd=1"
+        >sol'n</a><br><br>
 		<!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Course intro, Matlab intro, variables,     <br>&nbsp;
 		operators, expressions, vectors, matricies          <br>&nbsp;
