EGR 170 publishing Matlab code examples for PS#2

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -59,7 +59,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 12/24/2018 10:19 pm)
+                              >(Last update: 12/25/2018 1:02 am)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -125,8 +125,20 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 			4.8,  <!-- script Pythagorean -->
 			4.22, <!-- script storm -->
 			4.24, <!-- ifelse to switch -->
-			4.31  <!-- makemat --></D5>  
-		
+			4.31  <!-- makemat --></D5>                    <br>&nbsp;
+			                                               <br>&nbsp;
+		Examples of MATLAB scripts and functions <a href=
+		"https://dordt.instructure.com/files/141907904/download?download_frd=1"
+		>here</a>.                                         <br>&nbsp;
+		Browsing this code may give you hints, style tips, <br>&nbsp;
+		and other help.  You may use the functions in your <br>&nbsp;
+		own work too, or you find any of them useful.	   <br>&nbsp;
+        To see the functions, save the Zip file on your    <br>&nbsp;
+        local media, then open them in MATLAB or           <br>&nbsp;
+		GNU Octave or if you are just looking, you may     <br>&nbsp;
+		open them in Windows Notepad or Notepad++.         <br>&nbsp;
+        You may run any of the scripts to see what         <br>&nbsp;
+		they do. 	
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
@@ -145,7 +157,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
         >sol'n</a><br><br>
 		<!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Course intro, Matlab intro, variables,     <br>&nbsp;
-		operators, expressions, vectors, matricies          <br>&nbsp;
+		operators, expressions, vectors, matrices          <br>&nbsp;
 		Read:  Attway, Chapters 1, 2                        <br>&nbsp;
 		                                                    <br>&nbsp;
 		Do homework in <D4>Attaway 4th ed.                  <br>&nbsp;
