EGR 170 PS#2 added note about decomressing a zip file

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -59,7 +59,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 12/25/2018 1:02 am)
+                              >(Last update: 12/25/2018 1:07 am)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -138,7 +138,8 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		GNU Octave or if you are just looking, you may     <br>&nbsp;
 		open them in Windows Notepad or Notepad++.         <br>&nbsp;
         You may run any of the scripts to see what         <br>&nbsp;
-		they do. 	
+		they do.  To run them you must decompress the      <br>&nbsp;
+		Zip file.  
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
    <!-- PS#  -->                  <TD align="right" valign="top">
