EGR 323 daily notes, PS#3, Errata on problem 8.3 published

--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -106,13 +106,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
 	  1/21<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      1/23<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      1/25<!-- --</a><!-- --></td>
+      1/23<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/141932629/download?download_frd=1"><!-- -->
+      1/25<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Optimizing basic gain, introduction to the cascode technique<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Call for CEC paper, Problem D8.3, CG and CB Rin and Rout, CG body effect<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->More on CB, CS, Introduction to the Cascode amplifier<!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
