--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -16,7 +16,7 @@ HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/eng
               DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
 			  "../../err.htm"
                        >TEXTBOOK ERRATA</a><br>
-                    (last update 12/05/2018)<br> 
+                    (last update 1/25/2019)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -403,6 +403,17 @@ Page 402 and 403, Figures 6.34 and 6.35.</b><br>
        sections of the chapter.) 
        &nbsp; &nbsp; <i>(Posted 1/22/2011)</i></small></blockquote> -->
       
+                                           <A NAME="P576"></A><b>
+Page 576, Problem 8.3.</b><br>
+   Insert a sentence so that the end of the problem statement 
+   reads as:<br><br> 
+
+   &quot;. . . high as 1.1 V.  Choose the ratio W/L to maximize the 
+   overdrive voltage of the diode-connected transistor.  Also 
+   neglect channel-length modulation.&quot;  
+                        &nbsp; &nbsp; &nbsp; &nbsp; 
+   <i><small>(Posted 1/25/2019)</small></i><br><br>
+
                                            <A NAME="P580"></A><b>
 Page 580, Problem 8.26.</b><br>
    Add, "for both bias levels." to the last line of the problem
