--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/24/2019 8:35 pm)
+                              >(Last update: 1/25/2019 1:45 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -84,21 +84,29 @@ PS                                                           <BR>
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
- &nbsp;
+ 3
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;
+        1/25
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;
+        2/01
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!-- <a href=
         "https://dordt.instructure.com/files/134540373/download?download_frd=1"
         >9/17</a><br> -->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        &nbsp;
-		<DO>Do +D8.69 and more to be announced later</DO>
+        Topics: Cascode, double cascode, folded        <br>&nbsp; 
+		                              &nbsp; &nbsp; &nbsp; &nbsp;
+		cascode, cascoded mirror, wilson, widlar       <br>&nbsp;
+		Read 8.5, 8.6                                  <br>&nbsp;
+		                                               <br>&nbsp;
+		<DO>Do +D8.69, +8.71, 8.78, 8.82, 8.84, +D8.90</DO><br>&nbsp;
+		                                               <br>&nbsp;
+		Note <a href=
+		"https://dfdeboer.github.io/errata/Sedra_Smith/7th/S_S_7_ER.HTM#P588"
+		>errata on Problem 8.78</a>.
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  2
@@ -121,7 +129,11 @@ PS                                                           <BR>
 		                                               <br>&nbsp;
 		<DO>Do Problems +8.3, 8.4, 8.5, +8.8, 8.9,     <br>&nbsp;
 		+8.11, +8.25, +8.27, +8.51, 8.55</DO>          <br>&nbsp;
-		                                    <br>&nbsp;<small>
+		                                               <br>&nbsp;
+		Note <a href=
+		"https://dfdeboer.github.io/errata/Sedra_Smith/7th/S_S_7_ER.HTM#P576"
+		>errata on Problem 8.3</a>.                    <br>&nbsp;
+		                                        <br>&nbsp;<small>
 		(On Thursday evening at about 8:30 PM dDB removed<br>&nbsp;
 		+D8.69 from this problem set and moved it to PS#3.)</small>
 <!-- ------------------------------------------ --></TD></TR><TR>
