Updating errata in Sedra & Smith 7e Problem 8.3 to include "magnitude"

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -409,8 +409,8 @@ Page 576, Problem 8.3.</b><br>
    reads as:<br><br> 
 
    &quot;. . . high as 1.1 V.  Choose the ratio W/L to maximize the 
-   overdrive voltage of the diode-connected transistor.  Also 
-   neglect channel-length modulation.&quot;  
+   magnitude of the overdrive voltage at the diode-connected 
+   transistor.  Also neglect channel-length modulation.&quot;  
                         &nbsp; &nbsp; &nbsp; &nbsp; 
    <i><small>(Posted 1/25/2019)</small></i><br><br>
 
