Update EGR 170 PS#2 to include a note about showing examples of working code

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -59,7 +59,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 12/25/2018 1:07 am)
+                              >(Last update: 12/26/2018 5:01 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -126,6 +126,12 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 			4.22, <!-- script storm -->
 			4.24, <!-- ifelse to switch -->
 			4.31  <!-- makemat --></D5>                    <br>&nbsp;
+			                                               <br>&nbsp;
+		In your solution set, when scripts and/or functions<br>&nbsp;
+		are requested, also cut-and-paste some examples    <br>&nbsp;
+		from the command window to show that your          <br>&nbsp;
+		code works.  You will have to use some judgement   <br>&nbsp;
+		to decide just what and how much to include.       <br>&nbsp;
 			                                               <br>&nbsp;
 		Examples of MATLAB scripts and functions <a href=
 		"https://dordt.instructure.com/files/141907904/download?download_frd=1"
