EGR 323 daily slides, EGR 322 F18 link to EGR 323 S19, EGR 323 S19 link to Canvas, Intro EE to temp directory for Web access

--- a/F18/322F18.HTM
+++ b/F18/322F18.HTM
@@ -119,9 +119,9 @@ offering of this course <!--
 <img src="../NEXT.GIF" ALT="MEXT" border="0"> --><br>
 <a href="../S17/323S17.HTM">
 <img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
-offering of EGR 323  <!--
-<a href="../S17/323S17.HTM"> 
-<img src="../NEXT.GIF" ALT="NEXT" border="0"> -->
+offering of EGR 323 
+<a href="../S19/323S19.HTM"> 
+<img src="../NEXT.GIF" ALT="NEXT" border="0">
                                                      </small></P> 
 
 </td></tr></table>
