--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -113,17 +113,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment-->Optimizing basic gain, introduction to the cascode technique<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Call for CEC paper, Problem D8.3, CG and CB Rin and Rout, CG body effect<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->More on CB, CS, Introduction to the Cascode amplifier<!--end comment--></td>  
-   </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 1/28------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  1/28<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/142061648/download?download_frd=1"><!-- -->
+	  1/28<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       1/30<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/01<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Cascode amplifier <i>R<sub>out</sub></i>, <i>A<sub>vo</sub></i>, <i>R<sub>in</sub></i><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
