--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/25/2019 1:45 pm)
+                              >(Last update: 2/01/2019 4:04 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -84,6 +84,27 @@ PS                                                           <BR>
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+ 4
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        2/01
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        2/08
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!-- <a href=
+        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
+        >9/17</a><br> -->
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Differential amp:  bias, large- and small-<br>&nbsp; 
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+		signal operation                               <br>&nbsp;
+		Read 9.1, 9.2                                  <br>&nbsp;
+		                                               <br>&nbsp;
+		<DO>Do +9.1, +9.3, +D9.13, +9.27, 9.28    </DO>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
  3
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -99,7 +120,7 @@ PS                                                           <BR>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Cascode, double cascode, folded        <br>&nbsp; 
 		                              &nbsp; &nbsp; &nbsp; &nbsp;
-		cascode, cascoded mirror, wilson, widlar       <br>&nbsp;
+		cascode, cascoded mirror, Wilson, Widlar       <br>&nbsp;
 		Read 8.5, 8.6                                  <br>&nbsp;
 		                                               <br>&nbsp;
 		<DO>Do +D8.69, +8.71, 8.78, 8.82, 8.84, +D8.90</DO><br>&nbsp;
@@ -118,9 +139,9 @@ PS                                                           <BR>
         1/25
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!-- <a href=
-        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
-        >9/17</a><br> -->
+		<a href=
+        "https://dordt.instructure.com/files/142270967/download?download_frd=1"
+        >1/28</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Basic gain cell, CG, CB amps alone,    <br>&nbsp;
 		                              &nbsp; &nbsp; &nbsp; &nbsp;
