EGR 323 daily slides

--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -126,17 +126,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Monday    -->&nbsp;<!--start comment-->Cascode amplifier <i>R<sub>out</sub></i>, <i>A<sub>vo</sub></i>, <i>R<sub>in</sub></i><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Cascode var, Wilson, Widlar, CC-CE and CC_CB variants, Darlington, Sziklai <!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment-->Darlington, Sziklai, <b>Ch. 9</b> Intro to Differential amplifiers<!--end comment--></td>  
-   </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
+   </TR><!-- Week of 2/04------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  2/04<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/142447388/download?download_frd=1"><!-- -->
+	  2/04<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/06<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       2/08<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Thev model of diff source&noise, bias & acceptabe common-mode noise<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
